--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
   <artifactId>maven-test</artifactId>
   <version>1.0</version>
 
+  <dependencies>
+  	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>3.4</version>
+	</dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
